objects/AssetLocationEvent__c.object
<CustomObject>
    <fields>
        <fullName>AssetEventDate__c</fullName>
        <label>Asset Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssetEventReference__c</fullName>
        <label>Asset Event Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>CCC call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstalledProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Asset / Location Events</relationshipLabel>
        <relationshipName>AssetLocationEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocationEventEndDate__c</fullName>
        <label>Location Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationEventReference__c</fullName>
        <label>Location Event Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LocationEventStartDate__c</fullName>
        <label>Location Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Event</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Asset / Location Events</relationshipLabel>
        <relationshipName>AssetLocationEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Asset / Location Events</relationshipLabel>
        <relationshipName>AssetLocationEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset / Location Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>InstalledProduct__c</columns>
        <columns>LocationEvent__c</columns>
        <columns>WorkOrder__c</columns>
        <columns>LocationEventStartDate__c</columns>
        <columns>LocationEventEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Asset / Location Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset / Location Events</pluralLabel>
    <recordTypes>
        <fullName>AssetEvent</fullName>
        <active>true</active>
        <description>Asset Events</description>
        <label>Asset Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location_Event</fullName>
        <active>true</active>
        <description>Location Events</description>
        <label>Location Event</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>